# Notes

./: .gitignore  README.md
Dynamic Programming/C++/: BestSum.cpp  best-sum.cpp  fibonacciSequence.cpp
Dynamic Programming/Python/: Floatingpoint.py
Dynamic-Programming/C++/RandomPractice/: Bank.h  CMakeLists.txt  Date.h  User.h  main.cpp
Dynamic-Programming/Python/JobCode/: jcode.py
Projects/airproject/: .gitignore  main.cpp  manager.cpp  manager.hpp  map.cpp  map.hpp  player.cpp  player.hpp
Python/: Brightness_Contrast.py  qtgui.py
